# AppAddResoursesToUsers

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/add_host/: apps.py  forms.py  models.py  urls.py  views.py
src/add_host/templates/add_host/: base.html  index.html
src/add_host/templates/add_host/host/: create.html  list_host.html  update.html
src/service_add_resourses/: asgi.py  settings.py  urls.py  wsgi.py
