[tool.poetry]
name = "appaddresoursestousers"
version = "0.1.0"
description = ""
authors = ["ArtemGrom <art.gromov@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
